chore: refactor build script to convention plugins

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,4 +19,11 @@ org.gradle.jvmargs=-XX:MaxMetaspaceSize=768m
 # repository.apache.org does not yet support .sha256 and .sha512 checksums
 systemProp.org.gradle.internal.publish.checksums.insecure=true
 
+# Kotlin Dokka is experimental, and we want to silence the build warning
+org.jetbrains.dokka.experimental.gradle.pluginMode=V2Enabled
+org.jetbrains.dokka.experimental.gradle.pluginMode.noWarn=true
+
 current.version=1.90
+
+repoUrl=https://github.com/vlsi/vlsi-release-plugins
+centralPortalPublishingTimeout=180
