chore: add release-drafter workflow

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,4 +19,4 @@ org.gradle.jvmargs=-XX:MaxMetaspaceSize=768m
 # repository.apache.org does not yet support .sha256 and .sha512 checksums
 systemProp.org.gradle.internal.publish.checksums.insecure=true
 
-project.version=1.90
+current.version=1.90
