--- a/.github/workflows/release-test.yml
+++ b/.github/workflows/release-test.yml
@@ -114,7 +114,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        gradle-version: [wrapper, rc, nightly]
+        gradle-version: [wrapper, release-candidate, nightly]
     name: 'JMeter ${{ matrix.gradle-version }}'
     runs-on: ubuntu-latest
     steps:
